added ui for marty bot

--- a/public/html/reviews.html
+++ b/public/html/reviews.html
@@ -19,6 +19,7 @@
             <a href="likes.html"><i class="like">💓</i> Likes</a>
             <a href="reviews.html" class="active">My Reviews</a>
             <a href="watchlist.html">Watchlist</a>
+            <a href="botpage.html">MartyBot</a>
             <div class="profile-icon">JS</div>
         </div>
     </header>
