--- a/public/html/index.html
+++ b/public/html/index.html
@@ -16,9 +16,10 @@
         
         <div class="user-actions">
             <button class="theme-toggle" id="themeToggle">🌓</button>
-            <a href="likes.html"><i class="star">★</i> Likes</a>
+            <a href="likes.html"><i class="like">💓</i> Likes</a>
             <a href="reviews.html">My Reviews</a>
             <a href="watchlist.html" class="active">Watchlist</a>
+            <a href="botpage.html">MartyBot</a>
             <div class="profile-icon">JS</div>
         </div>
     </header>
