--- a/public/html/likes.html
+++ b/public/html/likes.html
@@ -19,6 +19,7 @@
             <a href="likes.html" class="active"><i class="like">💓</i> Likes</a>
             <a href="reviews.html">My Reviews</a>
             <a href="watchlist.html">Watchlist</a>
+            <a href="botpage.html">MartyBot</a>
             <div class="profile-icon">JS</div>
         </div>
     </header>
