--- a/public/html/botpage.html
+++ b/public/html/botpage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo">Absolute<span>Cinema</span></a>
+        <a href="index.html" class="logo">🖐️Absolute😐<span>Cinema🖐️</span></a>
         
         <div class="search-bar">
             <input type="text" placeholder="Search for movies, directors, actors...">
