--- a/public/html/auth.html
+++ b/public/html/auth.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AbsoluteCinema | Join Us</title>
+    <link rel="icon" type="image/x-icon" href="../res/favicon.ico">
     <link rel="stylesheet" href="../css/auth.css"">
 </head>
 <body>
