--- a/public/html/botpage.html
+++ b/public/html/botpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MartyBot | AbsoluteCinema</title>
+    <link rel="icon" type="image/x-icon" href="../res/favicon.ico">
     <link rel="stylesheet" href="../css/botpage.css">
 </head>
 <body>
